| Summary: | ASTERISK-29816: SAY_DTMF_INTERRUPT channel variable is not honored | ||||
| Reporter: | Sean Bright (seanbright) | Labels: | |||
| Date Opened: | 2021-12-23 16:41:02.000-0600 | Date Closed: | 2022-01-05 07:56:34.000-0600 | ||
| Priority: | Minor | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Applications/General | ||
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | {{SayAlpha}}, {{SayAlphaCase}}, {{SayDigits}}, {{SayMoney}}, {{SayNumber}}, {{SayOrdinal}}, and {{SayPhonetic}} all claim to allow DTMF interruption if the {{SAY_DTMF_INTERRUPT}} channel variable is set to a truthy value, but this is not working.
Reported by Dovid Bender [on the asterisk-users mailing list|http://lists.digium.com/pipermail/asterisk-users/2021-December/296269.html]. | ||||
| Comments: | By: Sean Bright (seanbright) 2021-12-23 17:10:20.131-0600 This is broken in 16.21.0+, 18.7.0+, and 19.0.0+. By: Friendly Automation (friendly-automation) 2022-01-05 07:56:35.239-0600 Change 17712 merged by Friendly Automation: say.c: Honor requests for DTMF interruption. [https://gerrit.asterisk.org/c/asterisk/+/17712|https://gerrit.asterisk.org/c/asterisk/+/17712] By: Friendly Automation (friendly-automation) 2022-01-05 08:02:04.087-0600 Change 17738 merged by Friendly Automation: say.c: Honor requests for DTMF interruption. [https://gerrit.asterisk.org/c/asterisk/+/17738|https://gerrit.asterisk.org/c/asterisk/+/17738] By: Friendly Automation (friendly-automation) 2022-01-05 08:05:15.591-0600 Change 17739 merged by Friendly Automation: say.c: Honor requests for DTMF interruption. [https://gerrit.asterisk.org/c/asterisk/+/17739|https://gerrit.asterisk.org/c/asterisk/+/17739] By: Friendly Automation (friendly-automation) 2022-01-05 08:08:27.608-0600 Change 17740 merged by Joshua Colp: say.c: Honor requests for DTMF interruption. [https://gerrit.asterisk.org/c/asterisk/+/17740|https://gerrit.asterisk.org/c/asterisk/+/17740] By: Friendly Automation (friendly-automation) 2022-01-17 12:46:22.508-0600 Change 17886 merged by Joshua Colp: say.c: Honor requests for DTMF interruption. [https://gerrit.asterisk.org/c/asterisk/+/17886|https://gerrit.asterisk.org/c/asterisk/+/17886] | ||||